# nantai-3d

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  make.py  pyproject.toml  tools.lock.json
assets/: registry.json
cloud/: setup_autodl.sh  train_3dgs_nerfstudio.sh
docs/: real-data-workflow.md
handoff/: AUDIT-2026-07-22-real-3d-scene-gap-assessment.md  FEEDBACK-ARCH-P0-001.md  FEEDBACK-ARCH-P0-002.md  FEEDBACK-CODEX-007-macos-environment-audit.md  FEEDBACK-CODEX-008-macos-asset-payload-recovery.md  FEEDBACK-CODEX-009-multiscale-surface-realism.md  FEEDBACK-CODEX-010-default-infinite-mesh-and-template-fidelity.md  FEEDBACK-CODEX-011-high-fidelity-near-mesh-h2.md  FEEDBACK-CODEX-013-windows-h3-ktx2-pack.md  FEEDBACK-CODEX-015-blender-environment-module-runtime.md  FEEDBACK-CODEX-016-task4-complete-to-opus.md  FEEDBACK-CODEX-017-task5-section3-quality-caller.md  FEEDBACK-HANDOFF-001.md  FEEDBACK-HANDOFF-002.md  FEEDBACK-HANDOFF-CODEX-003.md  FEEDBACK-HANDOFF-CODEX-004.md  FEEDBACK-HANDOFF-CODEX-006-phase1.md  FEEDBACK-HANDOFF-CODEX-006-weather-overlays.md  FEEDBACK-HANDOFF-CODEX-009-reciprocal-route-production-caller.md  FEEDBACK-HANDOFF-CODEX-011-phase44-central-canary.md  FEEDBACK-HANDOFF-CODEX-012.md  FEEDBACK-HANDOFF-CODEX-014-fresh-exact218-phase43.md  FEEDBACK-HANDOFF-CODEX-023-v8-exact218-phase43-six-role.md  FEEDBACK-HANDOFF-CODEX-024-role-aware-terrain-conforming-v5.md  FEEDBACK-HANDOFF-CODEX-025-batch20-noncollinear-six-role.md  FEEDBACK-HANDOFF-CODEX-026-batch21-watermill-construction.md  FEEDBACK-HANDOFF-GLM-001.md  (+115 more)
(+418 files in other folders)
